--- a/options.html
+++ b/options.html
@@ -3,10 +3,65 @@
 <head><title>Divine Intervention Options</title></head>
 <body>
 
-<button id="link">Link</button>
+<div style="text-align: center;">
+  <button id="link">Plaid API</button>
+</div>
 
-<script src="lib/jquery.min.js"></script>
-<script src="lib/link-initialize.js"></script>
+<div style="width: 90vw; margin: auto;">
+  <form class="pure-form pure-form-stacked">
+      <fieldset>
+          <legend>Legend</legend>
+
+          <div class="pure-g">
+              <div class="pure-u-1 pure-u-md-1-3">
+                  <label for="first-name">First Name</label>
+                  <input id="first-name" class="pure-u-23-24" type="text">
+              </div>
+
+              <div class="pure-u-1 pure-u-md-1-3">
+                  <label for="last-name">Last Name</label>
+                  <input id="last-name" class="pure-u-23-24" type="text">
+              </div>
+
+              <div class="pure-u-1 pure-u-md-1-3">
+                  <label for="email">E-Mail</label>
+                  <input id="email" class="pure-u-23-24" type="email" required>
+              </div>
+
+              <div class="pure-u-1 pure-u-md-1-3">
+                  <label for="city">City</label>
+                  <input id="city" class="pure-u-23-24" type="text">
+              </div>
+
+              <div class="pure-u-1 pure-u-md-1-3">
+                  <label for="state">State</label>
+                  <select id="state" class="pure-input-1-2">
+                      <option>AL</option>
+                      <option>CA</option>
+                      <option>IL</option>
+                  </select>
+              </div>
+          </div>
+
+          <label for="terms" class="pure-checkbox">
+              <input id="terms" type="checkbox"> I've read the terms and conditions
+          </label>
+
+          <button type="submit" class="pure-button pure-button-primary">Submit</button>
+      </fieldset>
+  </form>
+</div>
+
+<script src="lib/js/jquery.min.js"></script>
+<script src="lib/js/link-initialize.js"></script>
 <script src="options.js"></script>
+
+<!-- <script src="lib/js/slim.min.js"></script>
+<script src="lib/js/popper.min.js"></script>
+<script src="lib/js/bootstrap.min.js"></script>
+<script src="lib/css/bootstrap.css"></script> -->
+
+<link rel="stylesheet" href="lib/css/pure.css">
+
 </body>
 </html>
