--- a/options.html
+++ b/options.html
@@ -54,6 +54,8 @@
 
 <script src="lib/js/jquery.min.js"></script>
 <script src="lib/js/link-initialize.js"></script>
+<script src="lib/js/chrome-storage-promise.js"></script>
+<script src="shared.js"></script>
 <script src="options.js"></script>
 
 <!-- <script src="lib/js/slim.min.js"></script>
