--- a/options.html
+++ b/options.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title>Divine Intervention Options</title></head>
+<head>
+    <title>Divine Intervention Options</title>
+    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+</head>
 <body>
 
 <div style="text-align: center;">
@@ -53,6 +56,7 @@
 </div>
 
 <script src="lib/js/jquery.min.js"></script>
+<script src="lib/js/bootstrap.bundle.min.js"></script>
 <script src="lib/js/link-initialize.js"></script>
 <script src="lib/js/chrome-storage-promise.js"></script>
 <script src="shared.js"></script>
@@ -62,8 +66,6 @@
 <script src="lib/js/popper.min.js"></script>
 <script src="lib/js/bootstrap.min.js"></script>
 <script src="lib/css/bootstrap.css"></script> -->
-
-<link rel="stylesheet" href="lib/css/pure.css">
 
 </body>
 </html>
