--- a/options.html
+++ b/options.html
@@ -6,54 +6,29 @@
 </head>
 <body>
 
-<div style="text-align: center;">
-  <button id="link">Plaid API</button>
+
+<div class="jumbotron">
+  <h1 class="display-4">Divine Intervention</h1>
+  <p class="lead">Financial information when you need it the most</p>
+  <hr class="my-4">
+  <p>
+    It is easy to exceed the credit limit or overdraft a debit card simply out of ignorance. 
+    Banks notify you only in the aftermath when they've charged the fees already - a situation that
+    could have been avoided if only you knew about your low balances. 
+  </p>
+  <p>
+    From now on, we will intervene every time you're about to overspend.
+    The extension hides in the background and provides a timely warning whenever you're about to make a purchase
+    that will exceed any of your financial limits. You can visualize how your balance will be affected by the purchase
+    so that you can always make well-informed purchasing decisions. 
+  </p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Add a bank account</a>
 </div>
-
-<div style="width: 90vw; margin: auto;">
-  <form class="pure-form pure-form-stacked">
-      <fieldset>
-          <legend>Legend</legend>
-
-          <div class="pure-g">
-              <div class="pure-u-1 pure-u-md-1-3">
-                  <label for="first-name">First Name</label>
-                  <input id="first-name" class="pure-u-23-24" type="text">
-              </div>
-
-              <div class="pure-u-1 pure-u-md-1-3">
-                  <label for="last-name">Last Name</label>
-                  <input id="last-name" class="pure-u-23-24" type="text">
-              </div>
-
-              <div class="pure-u-1 pure-u-md-1-3">
-                  <label for="email">E-Mail</label>
-                  <input id="email" class="pure-u-23-24" type="email" required>
-              </div>
-
-              <div class="pure-u-1 pure-u-md-1-3">
-                  <label for="city">City</label>
-                  <input id="city" class="pure-u-23-24" type="text">
-              </div>
-
-              <div class="pure-u-1 pure-u-md-1-3">
-                  <label for="state">State</label>
-                  <select id="state" class="pure-input-1-2">
-                      <option>AL</option>
-                      <option>CA</option>
-                      <option>IL</option>
-                  </select>
-              </div>
-          </div>
-
-          <label for="terms" class="pure-checkbox">
-              <input id="terms" type="checkbox"> I've read the terms and conditions
-          </label>
-
-          <button type="submit" class="pure-button pure-button-primary">Submit</button>
-      </fieldset>
-  </form>
-</div>
+<!-- <form>
+  <div style="text-align: center;">
+    <button id="link" type="submit" class="btn btn-primary">Add a bank account</button>
+  </div>
+</form> -->
 
 <script src="lib/js/jquery.min.js"></script>
 <script src="lib/js/bootstrap.bundle.min.js"></script>
@@ -61,11 +36,6 @@
 <script src="lib/js/chrome-storage-promise.js"></script>
 <script src="shared.js"></script>
 <script src="options.js"></script>
-
-<!-- <script src="lib/js/slim.min.js"></script>
-<script src="lib/js/popper.min.js"></script>
-<script src="lib/js/bootstrap.min.js"></script>
-<script src="lib/css/bootstrap.css"></script> -->
 
 </body>
 </html>
