modal my life away

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
 
 <div class="jumbotron">
   <h1 class="display-4">Divine Intervention</h1>
-  <p class="lead">Financial information when you need it the most</p>
+  <p class="lead">Financial information when you need it the most.</p>
   <hr class="my-4">
   <p>
     It is easy to exceed the credit limit or overdraft a debit card simply out of ignorance. 
@@ -22,7 +22,7 @@
     that will exceed any of your financial limits. You can visualize how your balance will be affected by the purchase
     so that you can always make well-informed purchasing decisions. 
   </p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Add a bank account</a>
+  <a id="link" class="btn btn-primary btn-lg" href="#" role="button">Add a bank account</a>
 </div>
 <!-- <form>
   <div style="text-align: center;">
