--- a/modal.html
+++ b/modal.html
@@ -1,4 +1,15 @@
 <div id="divine-backdrop"></div>
 <div id="divine-modal">
-
+    <div class="card mb-3">
+        <div id="divine-other">
+            <canvas id="Overall" width= "700" height="100"></canvas>
+        </div>
+        
+        <!-- <img src="" class="card-img-top" alt="..."> -->
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
 </div>
