Improve Home page UI and ensure bank accounts persist after refreshing the page

--- a/options.html
+++ b/options.html
@@ -6,16 +6,23 @@
 </head>
 <body>
 
-<div class="jumbotron">
-  <h1 class="display-4">Divine Intervention</h1>
-  <p class="lead">Financial information when you need it the most.</p>
+<div class="jumbotron" style="background-color:#F7EE8D">
+  <div style="display: flex">
+    <img src="img/icon128.png" style="width: 100px; height: 100px;"></img>
+    <div>
+      <h1 class="alert-heading" style="margin-left: 20px; padding-top: 10px;">Divine Intervention</h1>
+      <p class="lead" style="margin-left: 20px; font-weight: 500">Financial information when you need it the most.</p>
+    </div>
+  </div>
+    <!-- <p class="lead">Financial information when you need it the most.</p> -->
+  <!-- </div> -->
   <hr class="my-4">
-  <p>
+  <p style="font-weight: 440">
     It is easy to exceed the credit limit or overdraft a debit card simply out of ignorance. 
     Banks notify you only in the aftermath when they've charged the fees already - a situation that
     could have been avoided if only you knew about your low balances beforehand. 
   </p>
-  <p>
+  <p style="font-weight: 440">
     From now on, we will intervene every time you're about to overspend.
     The extension hides in the background and provides a timely warning whenever you're about to make a purchase
     that will exceed any of your financial limits. You can visualize how your balance will be affected by the purchase
