--- a/options.html
+++ b/options.html
@@ -17,12 +17,16 @@
     <!-- <p class="lead">Financial information when you need it the most.</p> -->
   <!-- </div> -->
   <hr class="my-4">
-  <p style="font-weight: 440">
+  <p style="font-weight: 480">
+    <b>Problem</b>
+    <br>
     It is easy to exceed the credit limit or overdraft a debit card simply out of ignorance. 
     Banks notify you only in the aftermath when they've charged the fees already - a situation that
     could have been avoided if only you knew about your low balances beforehand. 
   </p>
-  <p style="font-weight: 440">
+  <p style="font-weight: 480">
+    <b>Solution</b>
+    <br>
     From now on, we will intervene every time you're about to overspend.
     The extension hides in the background and provides a timely warning whenever you're about to make a purchase
     that will exceed any of your financial limits. You can visualize how your balance will be affected by the purchase
@@ -31,6 +35,7 @@
   <a class="btn btn-primary btn-lg" href="#" id="link" role="button">Add a bank account</a>
 </div>
 
+<h2 style="margin-left: 30px; margin-bottom: 30px;">Accounts</h2>
 <ul id="institutions" class="list-group">
   <!-- data will be injected here -->
 </ul>
